--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ streamlit==1.45.0
 ipykernel==6.15.0
 joblib==1.4.2
 plotly.express==0.4.1
-spacy==3.8.7
 plotly==5.22.0
+statsmodels==0.14.4
+scipy==1.16.0
